bunch more work on configured and placed features
also fixed structure addition code, they have been moved to tags